--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emoji-mart": "^3.0.1",
     "emoji-picker-react": "^3.4.2",
     "firebase": "^8.2.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
