--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emoji-picker-react": "^3.4.2",
     "firebase": "^8.2.1",
     "node-sass": "^5.0.0",
+    "pattern.css": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
