--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scrollview": "0.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
