--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "emailjs-com": "^2.6.4",
     "emoji-mart": "^3.0.1",
     "emoji-picker-react": "^3.4.2",
     "firebase": "^8.2.1",
