added onscreen keyboard

--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "pattern.css": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-onscreen-keyboard": "^1.0.0",
     "react-router-dom": "^5.2.0",
+    "react-screen-keyboard": "^1.4.1",
     "react-scripts": "4.0.1",
     "react-scrollview": "0.0.3",
+    "react-simple-keyboard": "^3.1.12",
     "react-speech-recognition": "^3.8.0",
+    "simple-keyboard": "^3.1.11",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
