--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pattern.css": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-email-autocomplete": "^1.3.4",
     "react-onscreen-keyboard": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-screen-keyboard": "^1.4.1",
