--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^5.0.0",
     "pattern.css": "^1.0.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-onscreen-keyboard": "^1.0.0",
     "react-router-dom": "^5.2.0",
@@ -26,6 +27,7 @@
     "react-scrollview": "0.0.3",
     "react-simple-keyboard": "^3.1.12",
     "react-speech-recognition": "^3.8.0",
+    "reactjs-copy-to-clipboard": "^0.2.0",
     "simple-keyboard": "^3.1.11",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
