--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^5.0.0",
     "pattern.css": "^1.0.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-email-autocomplete": "^1.3.4",
     "react-onscreen-keyboard": "^1.0.0",
