--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-email-autocomplete": "^1.3.4",
+    "react-native-vector-icons": "^8.1.0",
     "react-onscreen-keyboard": "^1.0.0",
     "react-redux-loading-bar": "^5.0.0",
     "react-router-dom": "^5.2.0",
