--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-email-autocomplete": "^1.3.4",
     "react-onscreen-keyboard": "^1.0.0",
+    "react-push-notification": "^1.3.0",
     "react-redux-loading-bar": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-screen-keyboard": "^1.4.1",
