--- a/Messenger-Native-App/package.json
+++ b/Messenger-Native-App/package.json
@@ -12,19 +12,28 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "bootstrap": "^3.4.1",
     "expo": "~40.0.0",
     "expo-image-picker": "~9.2.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.3.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "node-sass-chokidar": "^1.5.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.0",
     "react": "16.13.1",
+    "react-background-image": "^1.2.0",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-router": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
