--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-onscreen-keyboard": "^1.0.0",
     "react-push-notification": "^1.3.0",
     "react-redux-loading-bar": "^5.0.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-screen-keyboard": "^1.4.1",
     "react-scripts": "4.0.1",
