--- a/package.json
+++ b/package.json
@@ -22,11 +22,9 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-email-autocomplete": "^1.3.4",
-
-    "react-mentions": "^4.3.0",
-
     "react-google-login": "^5.2.2",
-
+    "react-login-github": "^1.0.7",
+    "react-mentions": "^4.3.0",
     "react-onscreen-keyboard": "^1.0.0",
     "react-push-notification": "^1.3.0",
     "react-redux-loading-bar": "^5.0.0",
