--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-email-autocomplete": "^1.3.4",
+    "react-gif-picker": "^1.0.0",
     "react-google-login": "^5.2.2",
     "react-mentions": "^4.3.0",
     "react-onscreen-keyboard": "^1.0.0",
