--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "node-sass": "^5.0.0",
     "pattern.css": "^1.0.0",
     "react": "^17.0.1",
+    "react-card-flip": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scrollview": "0.0.3",
     "react-speech-recognition": "^3.8.0",
+    "react-spinners": "^0.11.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
