--- a/package.json
+++ b/package.json
@@ -22,14 +22,9 @@
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "react-email-autocomplete": "^1.3.4",
-
     "react-geolocation": "^1.0.4",
-
-
     "react-google-login": "^5.2.2",
-
     "react-login-github": "^1.0.7",
-
     "react-mentions": "^4.3.0",
     "react-onscreen-keyboard": "^1.0.0",
     "react-push-notification": "^1.3.0",
@@ -39,6 +34,7 @@
     "react-screen-keyboard": "^1.4.1",
     "react-scripts": "4.0.1",
     "react-scrollview": "0.0.3",
+    "react-select-search": "^3.0.7",
     "react-simple-keyboard": "^3.1.12",
     "react-speech-recognition": "^3.8.0",
     "react-top-loading-bar": "^2.0.1",
